2003-02-23  Tamuki <tamuki@linet.gr.jp>

	* timidity/tables.[ch], timidity/timidity.c:
	  Hack up attack_vol_table[] and sb_vol_table[]

2003-02-22  Chisato Yamauchi <cyamauch@hst.phyas.aichi-edu.ac.jp>

	* interface/xaw_i.c: Hack up arround color resources

2003-02-16  Takaya Nogami <t-nogami@happy.email.ne.jp>

	* timidity/controls.c: Add macosx_control_mode

	* libarc/arc.c: Add NeoWrd Support

2003-02-16  Daisuke Aoki <dai@sweetparty.ne.jp>

	* interface/winsyn_c.c (ctl_pass_playing_list): Fasten

2003-02-16  Stas Sergeev <stssppnn@yahoo.com>
	* interfaec/server_c.c, timidity/timidity.c:
	  Add timidity server support for dosemu's midid

2003-02-15  Daisuke Aoki <dai@sweetparty.ne.jp>
	* interface/winsyn.c:
	  Bug fixed aborting (Windows synthesizer GUI version)

2003-02-08  Saito <timidity@flashmail.com>
	* interface/w32g_ini.c, interface/w32g_pref.c,
	  interface/w32g_res.c, interface/w32g_utl.c, timidity/mix.c,
	  timidity/playimidi.c, timidity/readmidi.c,
	  timidity/tables.c, timidity/tables.h:
	  Obsolete "Attack Env. (0..3)" option (W32GUI version)
	  Improve envelope precision for SoundFont
	* ChangeLog: updated

2003-02-07  Tamuki <tamuki@linet.gr.jp>
	* timidity/playmidi.c
	  Bug fixed rarely aborting due to pitch bend

2003-02-07  mput <root@mput.dip.jp>
	* timidity/readmidi.c
	  Bug fixed SysEx. parser in case of no EOX

2003-02-01  Tamuki <tamuki@linet.gr.jp>
	* timidity/timidity.c
	  Compilable on NetBSD/OpenBSD
	  # thanks to Mr.342

2003-01-23  s_keishi <s_keishi@mutt.freemail.ne.jp>
	* interface/w32g_syn.c, interface/w32g_utl.c, interface/winsyn_c.c,
	  timitidy/playmidi.c:
	  Add time management on Windows synthesizer

2003-01-18  Daisuke Aoki <dai@sweetparty.ne.jp>
	* interface/w32g_ini.c, interface/w32g_pref.c,
	  interface/w32g_res.h, interface/w32g_res.rc,
	  interface/w32g_subwin2.c, interface/w32g_syn.c,
	  interface/w32g_utl.c, interface/w32g_utl.h, interface/winsyn_c.c,
	  libarc/unlzh.c, timidity/optcode.c, timidity/optcode.h,